--- a/environment.yml
+++ b/environment.yml
@@ -1,36 +1,59 @@
-name: 3dgan
+name: crfgan
 channels:
   - simpleitk
   - pytorch-lts
   - nvidia
-  - anaconda
   - conda-forge
+  - anaconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - absl-py=1.3.0=py38h06a4308_0
+  - aiohttp=3.8.3=py38h5eee18b_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - anyio=3.5.0=py38h06a4308_0
+  - argon2-cffi=20.1.0=py38h27cfd23_1
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - async-timeout=4.0.2=py38h06a4308_0
+  - attrs=22.1.0=py38h06a4308_0
+  - babel=2.11.0=py38h06a4308_0
+  - backcall=0.2.0=pyhd3eb1b0_0
+  - beautifulsoup4=4.11.1=py38h06a4308_0
   - blas=1.0=mkl
+  - bleach=4.1.0=pyhd3eb1b0_0
+  - blinker=1.4=py38h06a4308_0
   - brotli=1.0.9=he6710b0_2
   - brotlipy=0.7.0=py38h0a891b7_1004
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2022.4.26=h06a4308_0
+  - c-ares=1.19.0=h5eee18b_0
+  - ca-certificates=2023.01.10=h06a4308_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2022.5.18.1=py38h06a4308_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
+  - certifi=2022.12.7=py38h06a4308_0
   - cffi=1.15.0=py38hd667e15_1
   - charset-normalizer=2.0.12=pyhd8ed1ab_0
+  - click=8.0.4=py38h06a4308_0
   - cloudpickle=2.0.0=pyhd3eb1b0_0
+  - comm=0.1.2=py38h06a4308_0
   - cryptography=37.0.2=py38h2b5fc30_0
   - cudatoolkit=11.1.74=h6bb024c_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - cytoolz=0.11.0=py38h7b6447c_0
   - dask-core=2022.2.1=pyhd3eb1b0_0
   - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.5.1=py38h295c915_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
+  - entrypoints=0.4=py38h06a4308_0
+  - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.4.4=h295c915_0
   - ffmpeg=4.2.2=h20bf706_0
   - fontconfig=2.13.1=h6c09931_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.11.0=h70c0345_0
+  - frozenlist=1.3.3=py38h5eee18b_0
   - fsspec=2022.2.0=pyhd3eb1b0_0
   - giflib=5.2.1=h7b6447c_0
   - glib=2.69.1=h4ff587b_1
@@ -43,9 +66,27 @@ dependencies:
   - icu=58.2=he6710b0_3
   - idna=3.3=pyhd8ed1ab_0
   - imageio=2.9.0=pyhd3eb1b0_0
+  - importlib_resources=5.2.0=pyhd3eb1b0_1
   - intel-openmp=2021.4.0=h06a4308_3561
+  - ipykernel=6.19.2=py38hb070fc8_0
+  - ipython=8.10.0=py38h06a4308_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - ipywidgets=7.6.5=pyhd3eb1b0_1
+  - jedi=0.18.1=py38h06a4308_1
+  - jinja2=3.1.2=py38h06a4308_0
   - joblib=1.1.0=pyhd8ed1ab_0
   - jpeg=9b=h024ee3a_2
+  - json5=0.9.6=pyhd3eb1b0_0
+  - jsonschema=4.17.3=py38h06a4308_0
+  - jupyter=1.0.0=py38h06a4308_8
+  - jupyter_client=7.3.4=py38h06a4308_0
+  - jupyter_console=6.4.4=py38h06a4308_0
+  - jupyter_core=5.2.0=py38h06a4308_0
+  - jupyter_server=1.23.4=py38h06a4308_0
+  - jupyterlab=3.5.3=py38h06a4308_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_server=2.10.3=pyhd3eb1b0_1
+  - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
   - kiwisolver=1.4.2=py38h295c915_0
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
@@ -59,6 +100,8 @@ dependencies:
   - libidn2=2.3.2=h7f8727e_0
   - libopus=1.3.1=h7b6447c_0
   - libpng=1.6.37=hbc83047_0
+  - libprotobuf=3.20.1=h4ff587b_0
+  - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=11.2.0=h1234567_0
   - libtasn1=4.16.0=h27cfd23_0
   - libtiff=4.1.0=h2733197_1
@@ -73,70 +116,151 @@ dependencies:
   - locket=0.2.1=py38h06a4308_2
   - lxml=4.8.0=py38h1f438cf_0
   - lz4-c=1.9.3=h295c915_1
+  - markupsafe=2.1.1=py38h7f8727e_0
   - matplotlib=3.5.1=py38h06a4308_1
   - matplotlib-base=3.5.1=py38ha18d171_1
+  - matplotlib-inline=0.1.6=py38h06a4308_0
+  - mistune=0.8.4=py38h7b6447c_1000
   - mkl=2021.4.0=h06a4308_640
   - mkl-service=2.4.0=py38h7f8727e_0
   - mkl_fft=1.3.1=py38hd3c417c_0
   - mkl_random=1.2.2=py38h51133e4_0
+  - multidict=6.0.2=py38h5eee18b_0
   - munkres=1.1.4=py_0
+  - nbclassic=0.5.2=py38h06a4308_0
+  - nbclient=0.5.13=py38h06a4308_0
+  - nbconvert=6.5.4=py38h06a4308_0
+  - nbformat=5.7.0=py38h06a4308_0
   - ncurses=6.3=h7f8727e_2
+  - nest-asyncio=1.5.6=py38h06a4308_0
   - nettle=3.7.3=hbbd107a_1
   - networkx=2.7.1=pyhd3eb1b0_0
   - nibabel=3.2.2=pyhd8ed1ab_0
   - nilearn=0.9.1=pyhd8ed1ab_0
   - ninja=1.10.2=h06a4308_5
   - ninja-base=1.10.2=hd09550d_5
+  - notebook=6.5.2=py38h06a4308_0
+  - notebook-shim=0.2.2=py38h06a4308_0
   - numpy=1.22.3=py38he7a7128_0
   - numpy-base=1.22.3=py38hf524024_0
+  - oauthlib=3.2.2=py38h06a4308_0
   - openh264=2.1.1=h4ff587b_0
-  - openssl=1.1.1o=h7f8727e_0
+  - openssl=1.1.1t=h7f8727e_0
   - packaging=21.3=pyhd8ed1ab_0
   - pandas=1.4.2=py38h47df419_1
+  - pandocfilters=1.5.0=pyhd3eb1b0_0
+  - parso=0.8.3=pyhd3eb1b0_0
   - partd=1.2.0=pyhd3eb1b0_1
   - pcre=8.45=h295c915_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.0.1=py38h22f2fdc_0
   - pip=21.2.4=py38h06a4308_0
+  - pkgutil-resolve-name=1.3.10=py38h06a4308_0
+  - platformdirs=2.5.2=py38h06a4308_0
+  - prometheus_client=0.14.1=py38h06a4308_0
+  - prompt-toolkit=3.0.36=py38h06a4308_0
+  - prompt_toolkit=3.0.36=hd3eb1b0_0
+  - psutil=5.9.0=py38h5eee18b_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pyasn1=0.4.8=pyhd3eb1b0_0
+  - pyasn1-modules=0.2.8=py_0
   - pycparser=2.21=pyhd8ed1ab_0
   - pydicom=2.3.0=pyh6c4a22f_0
+  - pygments=2.11.2=pyhd3eb1b0_0
+  - pyjwt=2.4.0=py38h06a4308_0
   - pyopenssl=22.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.9=pyhd8ed1ab_0
   - pyqt=5.9.2=py38h05f1152_4
+  - pyrsistent=0.18.0=py38heee7806_0
   - pysocks=1.7.1=py38h578d9bd_5
   - python=3.8.13=h12debd9_0
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.16.2=py38h06a4308_0
   - python_abi=3.8=2_cp38
   - pytorch=1.8.2=py3.8_cuda11.1_cudnn8.0.5_0
   - pytz=2022.1=pyhd8ed1ab_0
   - pywavelets=1.3.0=py38h7f8727e_0
   - pyyaml=6.0=py38h7f8727e_1
+  - pyzmq=23.2.0=py38h6a678d5_0
   - qt=5.9.7=h5867ecd_1
+  - qtconsole=5.4.0=py38h06a4308_0
+  - qtpy=2.2.0=py38h06a4308_0
   - readline=8.1.2=h7f8727e_1
   - requests=2.27.1=pyhd8ed1ab_0
+  - requests-oauthlib=1.3.0=py_0
+  - rsa=4.7.2=pyhd3eb1b0_1
   - scikit-image=0.19.2=py38h51133e4_0
   - scikit-learn=1.0.2=py38h51133e4_1
   - scipy=1.7.3=py38hc147768_0
+  - send2trash=1.8.0=pyhd3eb1b0_1
   - setuptools=61.2.0=py38h06a4308_0
   - simpleitk=2.0.2=py38h3fd9d12_0
   - sip=4.19.13=py38h295c915_0
   - six=1.16.0=pyhd3eb1b0_1
+  - sniffio=1.2.0=py38h06a4308_1
+  - soupsieve=2.3.2.post1=py38h06a4308_0
   - sqlite=3.38.3=hc218d9a_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
+  - tensorboard-plugin-wit=1.8.1=py38h06a4308_0
+  - terminado=0.17.1=py38h06a4308_0
   - threadpoolctl=3.1.0=pyh8a188c0_0
   - tifffile=2020.10.1=py38hdd07704_2
+  - tinycss2=1.2.1=py38h06a4308_0
   - tk=8.6.11=h1ccaba5_1
+  - tomli=2.0.1=py38h06a4308_0
   - toolz=0.11.2=pyhd3eb1b0_0
   - torchaudio=0.8.2=py38
   - torchvision=0.9.2=py38_cu111
   - tornado=6.1=py38h27cfd23_0
-  - typing_extensions=4.1.1=pyh06a4308_0
   - urllib3=1.26.9=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - webencodings=0.5.1=py38_1
+  - websocket-client=0.58.0=py38h06a4308_4
+  - werkzeug=2.2.3=py38h06a4308_0
   - wheel=0.37.1=pyhd3eb1b0_0
+  - widgetsnbextension=3.5.2=py38h06a4308_0
   - x264=1!157.20191217=h7b6447c_0
   - xz=5.2.5=h7f8727e_1
   - yaml=0.2.5=h7b6447c_0
+  - yarl=1.8.1=py38h5eee18b_0
+  - zeromq=4.3.4=h2531618_0
+  - zipp=3.11.0=py38h06a4308_0
   - zlib=1.2.12=h7f8727e_2
   - zstd=1.4.9=haebb681_0
   - pip:
-    - protobuf==3.20.1
-    - tensorboardx==2.5
-prefix: /ocean/projects/asc170022p/lisun/miniconda3/envs/3dgan
+      - bokeh==2.4.3
+      - colorcet==3.0.1
+      - google-auth==2.17.3
+      - google-auth-oauthlib==1.0.0
+      - greenlet==3.0.3
+      - grpcio==1.54.0
+      - holoviews==1.15.4
+      - importlib-metadata==6.6.0
+      - loguru==0.7.2
+      - markdown==3.4.3
+      - panel==0.14.4
+      - param==1.13.0
+      - protobuf==3.20.1
+      - pyct==0.5.0
+      - pylibjpeg==2.0.1
+      - pylibjpeg-libjpeg==2.2.0
+      - pylidc==0.2.3
+      - python-crfsuite==0.9.9
+      - python-gdcm==3.0.24.1
+      - pytorch-tools==0.5.1
+      - pyviz-comms==2.2.1
+      - sklearn-crfsuite==0.3.6
+      - sqlalchemy==2.0.25
+      - tabulate==0.9.0
+      - tensorboard==2.13.0
+      - tensorboard-data-server==0.7.0
+      - tensorboardx==2.5
+      - torch-two-sample==0.1
+      - tqdm==4.65.0
+      - traitlets==5.9.0
+      - typing-extensions==4.9.0
+      - utils==1.0.1
+      - xarray==2023.1.0
+prefix: /home/mahshid/anaconda3/envs/hagan
